# jmatrix

./: .gitignore  Cargo.toml  pyproject.toml  readme.md
examples/: benchmark.py  demo.py
py/: README.md
py/jmatrix/: __init__.py
py/tests/: test_api.py
src/: create_matrix_interface.rs  generic_matrix.rs  generic_matrix_methods.rs  lib.rs  vector.rs
src/ops/: broadcast.rs  ewise.rs  getters.rs  initialisers.rs  matmul.rs  mod.rs  properties.rs  stats.rs
