[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "jmatrix"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
python-source = "py"
module-name = "jmatrix._lib"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "plotly>=6.2.0",
    "scikit-learn>=1.3.2",
]
